# ophtalmo

./: .gitignore  App.tsx  app.json  package.json  server.exe.txt  tsconfig.json
app/: App.tsx  app.json  package-lock.json  package.json
app/.expo/: packager-info.json  settings.json
app/src/: consent.tsx  inclusion.tsx  listitem.tsx  pathology.tsx  patient-detail.tsx  patient.ts  patients.tsx  questions.tsx  settings.tsx  state.ts  thumbnail.tsx  uploader.tsx  utils.ts  video.tsx
app/src/store/: index.ts
app/src/store/patients/: actions.ts  reducers.ts  types.ts
app/src/store/server/: actions.ts  reducers.ts  types.ts
server/: Cargo.toml  app.py
server/src/: main.rs
src/: consent.tsx  pathology.tsx  patient-detail.tsx  patient.ts  patients.tsx  settings.tsx  state.ts  thumbnail.tsx  video.tsx
