[package]
name = "server"
version = "0.1.0"
authors = ["Nicolas Patry <patry.nicolas@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2.0"
actix-rt = "1.1"
actix-web = "2.0"
tempfile = "3"
env_logger = "0.7.1"
futures = "0.3.4"
